# rust-totp-multiplatform-module

./: README.md
android-totp-module/: settings.gradle
android-totp-module/app/: build.gradle
android-totp-module/app/src/androidTest/java/id/co/ngecamp/totp/: ExampleInstrumentedTest.kt
android-totp-module/app/src/main/: AndroidManifest.xml
android-totp-module/app/src/main/java/id/co/ngecamp/totp/: MainActivity.kt  TOTP.kt
android-totp-module/app/src/main/res/values/: strings.xml  themes.xml
android-totp-module/app/src/test/java/id/co/ngecamp/totp/: ExampleUnitTest.kt
android-totp-module/gradle/wrapper/: gradle-wrapper.properties
ios-totp-module/ios-totp-module/: ContentView.swift  ios_totp_moduleApp.swift
ios-totp-module/ios-totp-module.xcodeproj/: project.pbxproj
ios-totp-module/ios-totp-module.xcodeproj/project.xcworkspace/xcuserdata/fdimarh.xcuserdatad/: UserInterfaceState.xcuserstate
ios-totp-module/ios-totp-module.xcodeproj/xcuserdata/fdimarh.xcuserdatad/xcschemes/: xcschememanagement.plist
ios-totp-module/ios-totp-moduleTests/: ios_totp_moduleTests.swift
ios-totp-module/ios-totp-moduleUITests/: ios_totp_moduleUITests.swift  ios_totp_moduleUITestsLaunchTests.swift
totp/: Cargo.toml
totp/src/: lib.rs
totp_android/: Cargo.toml
totp_android/src/: lib.rs
totp_ios/: Cargo.toml  Makefile  build-and-link-library.sh
totp_ios/TOTP.xcframework/: Info.plist
totp_ios/TOTP.xcframework/ios-arm64/Headers/: module.modulemap
totp_ios/TOTP.xcframework/ios-arm64_x86_64-simulator/Headers/: totp_ios.h
totp_ios/src/: lib.rs
(+3 files in other folders)
