[package]
name = "totp_android"
version = "0.1.0"
edition = "2021"
authors = ["Dimar <fajar.dimar@ngecamp.co.id>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
totp_multiplatform_module = { path = "../totp" }

[lib]
name = "totp_android"
crate-type = ["staticlib", "cdylib"]
